--- a/views/admin/categories.html
+++ b/views/admin/categories.html
@@ -37,7 +37,7 @@
                     <td>{$value.idcategory}</td>
                     <td>{$value.descategory}</td>
                     <td>
-                      <a href="/admin/categories/{$value.idcategory}/products}" class="btn btn-default btn-xs"><i class="fa fa-edit"></i> Produtos</a>
+                      <a href="/admin/categories/{$value.idcategory}/products" class="btn btn-default btn-xs"><i class="fa fa-edit"></i> Produtos</a>
 
                       <a href="/admin/categories/{$value.idcategory}" class="btn btn-primary btn-xs"><i class="fa fa-edit"></i> Editar</a>
 
